# universal-bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/bedrock/: Cargo.toml
crates/bedrock/src/: client.rs  config.rs  error.rs  lib.rs  message.rs  metrics.rs  model.rs  pool.rs  retry.rs  streaming.rs
crates/core/: Cargo.toml  demo_output.yaml  todo_project_1.yaml
crates/core/benches/: pipeline.rs
crates/core/examples/: basic_bot.rs  bedrock_integration.rs  bedrock_yaml_demo.rs  interactive_cli.rs  plugin_demo.rs  step_by_step_demo.rs
crates/core/src/: bot.rs  config.rs  context.rs  error.rs  lib.rs  message.rs  pipeline.rs  plugin.rs
docs/: 1.0-spec.md
examples/: basic_bot.rs  plugin_demo.rs
