[workspace]
members = [
    "crates/core",
    # "crates/bedrock",  # Temporarily disabled due to AWS SDK API changes
    # Future crates to implement:
    # "crates/pdmt", 
    # "crates/assetgen",
    # "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Universal Bot Team"]
edition = "2021"
license = "MIT"
homepage = "https://universal-bot.io"
repository = "https://github.com/universal-bot/universal-bot"
documentation = "https://docs.universal-bot.io"
readme = "README.md"
keywords = ["ai", "automation", "bedrock", "aws", "bot"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# AWS SDK
aws-config = "1.1"
aws-sdk-bedrockruntime = "1.13"
aws-sdk-s3 = "1.14"

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Caching
moka = { version = "0.12", features = ["future"] }

# Templates
handlebars = "5.0"
tera = "1.19"

# Security
secrecy = "0.8"
argon2 = "0.5"
jsonwebtoken = "9.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json"] }

# Testing
proptest = "1.4"
quickcheck = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
wiremock = "0.6"
fake = { version = "2.9", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"
futures = "0.3"
pin-project = "1.1"
bytes = "1.5"
base64 = "0.21"
humantime-serde = "1.1"
html-escape = "0.2"
fastrand = "2.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 2
debug = true